feat: Refactored fake notification service to com.google.firebase.MESSAGING_EVENT service